@@ -174,15 +174,6 @@ int main(void)
 "\n"
 "typedef struct _GHashTable	GHashTable;\n"
 "\n"
-"typedef struct _GHashNode      GHashNode;\n"
-"\n"
-"struct _GHashNode\n"
-"{\n"
-"  gpointer   key;\n"
-"  gpointer   value;\n"
-"  GHashNode *next;\n"
-"};\n"
-"\n"
 "typedef guint		(*GHashFunc)		(gconstpointer	key);\n"
 "\n"
 "typedef gboolean	(*GHRFunc)		(gpointer	key,\n"
